Added Laravel service provider registration

--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,12 @@
         "psr-4": {
             "Fbcl\\OpenTextApi\\Laravel\\Tests\\": "tests/"
         }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Fbcl\\OpenTextApi\\Laravel\\OpenTextServiceProvider"
+            ]
+        }
     }
 }
